--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,37 +1,51 @@
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-    <div th:replace="fragments.html :: head"></div>
-    <link rel="stylesheet" type="text/css" href="/css/login.css">
-
-    <body>
-    <div id="login">
-        <h3 class="text-center text-white pt-5">MakeShop 관리자에 접속하시기 위해 로그인을 해 주십시오.</h3>
-        <div class="container">
-            <div id="login-row" class="row justify-content-center align-items-center">
-                <div id="login-column" class="col-md-6">
-                    <div id="login-box" class="col-md-12">
-                        <form id="login-form" class="form" action="" method="post">
-                            <h3 class="text-center text-info">로그인</h3>
-                            <div class="form-group">
-                                <label for="username" class="text-info">ID:</label><br>
-                                <input type="text" name="username" id="username" class="form-control">
-                            </div>
-                            <div class="form-group">
-                                <label for="password" class="text-info">PW:</label><br>
-                                <input type="text" name="password" id="password" class="form-control">
-                            </div>
-                            <div class="form-group">
-                                <!--<label for="remember-me" class="text-info"><span>자동 로그인</span> <span><input id="remember-me" name="remember-me" type="checkbox"></span></label>--><br>
-                                <input type="submit" name="submit" class="btn btn-info btn-md" value="로그인">
-                            </div>
-                            <div id="register-link" class="text-right">
-                                <br>
-                                <a href="#" class="text-info">신규 회원 가입</a>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
+<!DOCTYPE html>
+<html lang="en"
+      xmlns:th="http://www.thymeleaf.org">
+<head th:replace="fragments.html :: head"></head>
+<body class="bg-light">
+<div th:replace="fragments.html :: main-nav"></div>
+<div class="container">
+    <div class="py-5 text-center">
+        <p class="lead">MakeShop 관리자에 접속하기 위해 로그인하여 주십시오.</p>
+        <h2>로그인</h2>
+        <small th:if="${param.error}" class="alert alert-danger" role="alert">
+            이메일(또는 닉네임)과 패스워드가 정확하지 않습니다.
+            <!--<p>또는 확인되지 않은 이메일을 사용했습니다. 이메일을 확인해 주세요.</p>-->
+            <!--<p>
+                확인 후 다시 입력하시거나, <a href="#" th:href="@{/find-passsword}">패스워드 찾기</a>를 이용하세요.
+            </p>-->
+        </small>
     </div>
-    </body>
+    <div class="row justify-content-center">
+        <form class="needs-validation col-sm-6" action="#" th:action="@{/login}" method="post" novalidate>
+            <div class="form-group">
+                <label for="username">이메일 또는 닉네임</label>
+                <input id="username" type="text" name="username" class="form-control"
+                       placeholder="your@email.com" aria-describedby="emailHelp" required>
+                <small id="emailHelp" class="form-text text-muted">
+                    가입할 때 사용한 이메일 또는 닉네임을 입력하세요.
+                </small>
+                <small class="invalid-feedback">이메일을 입력하세요.</small>
+            </div>
+            <div class="form-group">
+                <label for="password">패스워드</label>
+                <input id="password" type="password" name="password" class="form-control"
+                       aria-describedby="passwordHelp" required>
+                <small class="invalid-feedback">패스워드를 입력하세요.</small>
+            </div>
+
+            <div class="form-group">
+                <button class="btn btn-success btn-block" type="submit"
+                        aria-describedby="submitHelp">로그인</button>
+                <small id="submitHelp" class="form-text text-muted">
+                    MaksShop 관리자 계정이 없으시다면 <a href="#" th:href="@{/sign-up}">계정을 먼저 만드세요.</a>
+                </small>
+            </div>
+        </form>
+    </div>
+
+    <div th:replace="fragments.html :: footer"></div>
+</div>
+<script th:replace="fragments.html :: form-validation"></script>
+</body>
 </html>
