--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <div th:replace="fragments.html :: head"></div>
 <link rel="stylesheet" type="text/css" href="/css/index.css">
 <body>
 
 <div th:replace="fragments.html :: main-nav"></div>
-
+<h5 class="text-center"><span class="text-center" sec:authentication="name"></span><span>님 좋은 하루 되세요!</span></h5>
 <!-- Page Content -->
 <div class="container">
 
